<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center_horizontal"
        android:text="@string/personal_change"
        android:textSize="40sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:text="@string/information_name"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/personal_change_name"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:text="@string/information_sex"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/personal_change_sex"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:text="@string/information_age"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/personal_change_age"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:text="@string/information_address"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/personal_change_address"
            android:layout_width="155dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp" />

    </LinearLayout>

    <Button
        android:id="@+id/personal_change_commit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="300dp"
        android:layout_marginTop="40dp"
        android:text="@string/commit" />


</LinearLayout>