<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="125dp"
        android:gravity="center"
        android:text="@string/information_msg"
        android:textSize="40sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/information_name"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editText_name"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            tools:text="请输入姓名" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/information_sex"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editText_sex"

            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            tools:text="请输入性别" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/information_age"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editText_age"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            tools:text="请输入年龄" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/information_address"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editText_address"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            tools:text="请输入家庭住址" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/information_tel"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editText_tel"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:inputType="phone"
            tools:text="请输入电话" />

    </LinearLayout>

    <Button
        android:id="@+id/button_commit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:text="@string/commit" />

</LinearLayout>